# Linux_for_Tegra-source

./: .gitignore  Rules.mk  atf_and_trusty_README.txt  nvbuild.sh  v4l2_nv_extensions.h  v4l2libs_README.txt
.ccls-cache/@@sources@public@jetson@public_sources/: @usr@include@EGL@egl.h.blob  @usr@include@EGL@eglext.h.blob  @usr@include@EGL@eglplatform.h.blob  @usr@include@GLES2@gl2.h.blob  @usr@include@GLES2@gl2ext.h.blob  @usr@include@GLES2@gl2platform.h.blob  @usr@include@GLES@gl.h.blob  @usr@include@GLES@glext.h.blob  @usr@include@GLES@glplatform.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@X11@X.h.blob  @usr@include@X11@Xfuncproto.h.blob  @usr@include@X11@Xlib.h.blob  @usr@include@X11@Xosdefs.h.blob  @usr@include@X11@Xutil.h.blob  @usr@include@X11@keysym.h.blob  @usr@include@X11@keysymdef.h.blob  @usr@include@alloca.h.blob  @usr@include@assert.h.blob  @usr@include@endian.h.blob  @usr@include@features.h.blob  @usr@include@math.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@unistd.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@confname.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@environments.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@flt-eval-method.h.blob  @usr@include@x86_64-linux-gnu@bits@fp-fast.h.blob  @usr@include@x86_64-linux-gnu@bits@fp-logb.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_core.h.blob  (+55 more)
.ccls-cache/@sources@public@jetson@public_sources/: gst-plugins-nv-video-sinks@common@context.h.blob  gst-plugins-nv-video-sinks@common@display.h.blob  gst-plugins-nv-video-sinks@common@egl@context_egl.c  gst-plugins-nv-video-sinks@common@egl@context_egl.c.blob  gst-plugins-nv-video-sinks@common@egl@context_egl.h.blob  gst-plugins-nv-video-sinks@common@gstnvvideofwd.h  gst-plugins-nv-video-sinks@common@gstnvvideofwd.h.blob  gst-plugins-nv-video-sinks@common@renderer.h  gst-plugins-nv-video-sinks@common@renderer.h.blob  gst-plugins-nv-video-sinks@common@renderer@renderer_gl.c  gst-plugins-nv-video-sinks@common@renderer@renderer_gl.c.blob  gst-plugins-nv-video-sinks@common@renderer@renderer_gl.h  gst-plugins-nv-video-sinks@common@renderer@renderer_gl.h.blob  gst-plugins-nv-video-sinks@common@x11@display_x11.h  gst-plugins-nv-video-sinks@common@x11@display_x11.h.blob  gst-plugins-nv-video-sinks@common@x11@window_x11.c  gst-plugins-nv-video-sinks@common@x11@window_x11.c.blob  (+19 more)
arm-trusted-firmware/: Makefile
gst-nvarguscamera/: Makefile  README.txt  gstnvarguscamerasrc.cpp  gstnvarguscamerasrc.hpp
gst-nvcompositor/: 3rdpartyheaders.tbz2  Makefile  README.txt  gstnvcompositor.c  gstnvcompositor.h  gstnvcompositorpad.h
gst-nvdrmvideosink/: Makefile  README.txt  gstnvdrmvideosink.c  gstnvdrmvideosink.h
gst-nvtee/: 3rdpartyheaders.tbz2  Makefile  README.txt  gstnvtee.cpp  gstnvtee.h
gst-nvv4l2camera/: 3rdpartyheaders.tbz2  Makefile  README.txt  gstnvv4l2camerabufferpool.h  gstnvv4l2camerasrc.cpp  gstnvv4l2camerasrc.hpp
gst-nvvidconv/: Makefile  README.txt  gstnvvconv.c  gstnvvconv.h  nvbuf_utils.h
gst-plugins-nv-video-sinks/: Makefile  README.txt
gst-v4l2/: gstv4l2.c  gstv4l2allocator.c  gstv4l2allocator.h  gstv4l2bufferpool.c  gstv4l2bufferpool.h  gstv4l2h264enc.c  gstv4l2h264enc.h  gstv4l2h265enc.c  gstv4l2h265enc.h  gstv4l2object.c  gstv4l2videodec.c  gstv4l2videodec.h  gstv4l2videoenc.c  gstv4l2videoenc.h
gst-v4l2/ext/: videodev2.h
gstegl_src/: README.txt
gstegl_src/gst-egl/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.interface.tmk  Makefile.tmk  Makefile.umbrella.tmk  aclocal.m4  config.h.in  configure  configure.ac  libgstnveglglessink.export
gstegl_src/gst-egl/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
gstegl_src/gst-egl/common/: Makefile.in
gstegl_src/gst-egl/common/m4/: Makefile.in
gstegl_src/gst-egl/docs/: Makefile  Makefile.in
gstegl_src/gst-egl/docs/libs/: Makefile  Makefile.in
gstegl_src/gst-egl/docs/plugins/: Makefile  Makefile.in
gstegl_src/gst-egl/ext/: Makefile.am  Makefile.in
gstegl_src/gst-egl/ext/eglgles/: Makefile.am  Makefile.in  gstegladaptation.c  gstegladaptation_egl.c  gsteglglessink.c  gsteglglessink.h  gstegljitter.c  gstegljitter.h  libgsteglglessink.la  video_platform_wrapper.c
gstegl_src/gst-egl/gst-libs/: Makefile.in
gstegl_src/gst-egl/gst-libs/gst/: Makefile.am  Makefile.in
gstegl_src/gst-egl/gst-libs/gst/egl/: Makefile.am  Makefile.in  Makefile.interface.tmk  Makefile.tmk  egl.c  egl.h  libgstnvegl-1.0.export
gstegl_src/gst-egl/m4/: Makefile  Makefile.in
gstegl_src/gst-egl/pkgconfig/: Makefile.am  Makefile.in
gstegl_src/gst-egl/po/: Makefile  Makefile.in  Makefile.in.in.rej  POTFILES
gstegl_src/gst-egl/scripts/: Makefile.public  build.sh
gstegl_src/gst-egl/tools/: Makefile  Makefile.in
gstegl_src/gst-egl/win32/common/: config.h-new
gstjpeg_src/: README.txt
gstomx1_src/: README.txt
include/: config.h  libv4l-plugin.h  libv4l1.h  libv4l2.h  libv4l2rds.h  libv4lconvert.h
libtrusty/: trusty.c
libv4l2/: Makefile  Makefile.dGPU  libv4l2-priv.h  libv4l2.c  libv4l2.export  log.c  v4l2-plugin-android.c  v4l2-plugin.c  v4l2convert.c
libv4lconvert/: Makefile  Makefile.dGPU  bayer.c  cpia1.c  crop.c  flip.c  helper.c  hm12.c  jl2005bcd.c  jpeg.c  jpgl.c  libv4lconvert-priv.h  libv4lconvert.c  libv4lconvert.export  mr97310a.c  pac207.c  rgbyuv.c  se401.c  sn9c10x.c  sn9c2028-decomp.c  sn9c20x.c  spca501.c  spca561-decompress.c  sq905c.c  stv0680.c  tinyjpeg-internal.h
nvgstapps_src/: README.txt
nvidia-xconfig-32.6.1/: version.mk
nvidia-xconfig-32.7.1/: version.mk
nvsample_cudaprocess/: Makefile  iva_metadata.h  nvsample_cudaprocess.cu  nvsample_cudaprocess.h  nvsample_cudaprocess_README.txt
opencv-sample-apps/: README  Rules.mk
(+427 files in other folders)
